--- a/index.html
+++ b/index.html
@@ -28,9 +28,55 @@
     </nav>
 
     <!-- Main content -->
+    <!--Jumbotron carousel -->
+
     <div class="jumbotron jumbotron-bike">
       <h1>Get Going.</h1>
       <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+      <a class="btn btn-primary btn-large" href="#">Jump in</a>
+    </div>
+
+    <!-- Featured Product secion -->
+
+    <div class="container-fluid">
+      <h2>Featured Product</h1>
+      <div class="row">
+          <div class="image-container col-lg-6 col-sm-12">
+            <img src="resources/images/featured-project.png" alt="A farmhouse with snowy mountains in the background">
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6">
+          <h3>DeFrost: A Documentary</h3>
+          <p>by Leo De Firenze</p>
+          <p>DeFrost is a documentary about growing up in a little red house in a cold, harsh valley.
+            This is a story about my mother's childhood. This film attempts to capture vignettes of her
+            upbringing â€” her family, friends, pets, and eventual depature from a freezing valley in
+            Northern Italy â€” through beautiful cinematography and narration.</p>
+        </div>
+
+        <div class="col-lg-3 col-sm-6">
+          <h3>Product Categories</h3>
+          <ul>
+            <li>Art</li>
+            <li>Books</li>
+            <li>Crystals</li>
+            <li>Design</li>
+            <li>Doodles</li>
+            <li>Deedlybobs</li>
+            <li>Farming</li>
+            <li>Gadgets</li>
+            <li>Hoverboards</li>
+            <li>Jams, Jellies, Etc.</li>
+            <li>Magazines</li>
+            <li>Plants</li>
+            <li>Snakes & Snake Equipment</li>
+            <li>Tables</li>
+            <li>Ventriliquist Figures</li>
+            <li>Yoyos</li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <!-- JavaScript: jQuery, Slick, & main.js -->
