Completed having-trouble section and added media queries.

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@ the Slick carousel plugin, and css overrides. -->
     <!-- Featured Product section -->
 
     <div class="container feature">
-      <h2>Featured Product</h1>
+      <h3>Featured Product</h3>
       <div class="row">
-          <img class="img-responsive col-lg-6 col-sm-12 image-zoom" src="resources/images/featured-project.png" alt="A farmhouse with snowy mountains in the background">
-          <div class="col-lg-3 col-sm-6">
-            <h3>DeFrost: A Documentary</h3>
+          <img class="img-responsive col-md-6 col-sm-12 image-zoom" src="resources/images/featured-project.png" alt="A farmhouse with snowy mountains in the background">
+          <div class="col-md-3 col-xs-6">
+            <h4>DeFrost: A Documentary</h4>
             <p>by Leo De Firenze</p>
             <p>DeFrost is a documentary about growing up in a little red house in a cold, harsh valley.
               This is a story about my mother's childhood. This film attempts to capture vignettes of her
               upbringing - her family, friends, pets, and eventual depature from a freezing valley in
               Northern Italy - through beautiful cinematography and narration.</p>
           </div>
-          <div class="col-lg-3 col-sm-6">
-            <h3 class="categories">Product Categories</h3>
+          <div class="col-md-3 col-xs-6">
+            <h4 class="categories">Product Categories</h4>
             <ul>
               <li>Art</li>
               <li>Books</li>
@@ -80,23 +80,23 @@ the Slick carousel plugin, and css overrides. -->
     <!-- Projects section -->
 
     <div class="container projects">
-      <h2>Projects</h1>
+      <h3>Projects</h3>
       <div class="row">
-        <div class="col-lg-4 col-sm-12">
-          <img class="img-responsive image-zoom" src="resources/images/project1.png" alt="A young woman wearing black tights">
-          <h3>The Right Tights</h3>
+        <div class="col-sm-4 col-xs-12">
+          <img class="img-responsive image-zoom project-img" src="resources/images/project1.png" alt="A young woman wearing black tights">
+          <h4>The Right Tights</h4>
           <p>by Riley Mae</p>
           <p>These tights are 50 denier, beautifully constructed, hand-dyed, and guaranteed to last (no more ladders!). Made with high quality, completely toxic-free materials. Custom colors available to all backers.</p>
         </div>
-        <div class="col-lg-4 col-sm-12">
-          <img class="img-responsive image-zoom" src="resources/images/project2.png" alt="An elegant sitting room with toys in the corner">
-          <h3>Peppermint Smart Home</h3>
+        <div class="col-sm-4 col-xs-12">
+          <img class="img-responsive image-zoom project-img top-margin" src="resources/images/project2.png" alt="An elegant sitting room with toys in the corner">
+          <h4>Peppermint Smart Home</h4>
           <p>by Brian McDonald</p>
           <p>Instantly upgrade your home with technology that keeps your family and home safe. We've made Peppermint easy to use. Just talk to your phone and Peppermint will help you every step of the way.</p>
         </div>
-        <div class="col-lg-4 col-sm-12">
-          <img class="img-responsive image-zoom" src="resources/images/project3.png" alt="The window of a modern building reflecting a neon sign">
-          <h3>American Streetlife</h3>
+        <div class="col-sm-4 col-xs-12">
+          <img class="img-responsive image-zoom project-img top-margin" src="resources/images/project3.png" alt="The window of a modern building reflecting a neon sign">
+          <h4>American Streetlife</h4>
           <p>by Patrick Wallace</p>
           <p>I've been traveling around the United States for the past two years. I've slept on hundreds of couches, more than a few benches, and captured my experiences in this 120 page photo album.</p>
         </div>
@@ -105,13 +105,20 @@ the Slick carousel plugin, and css overrides. -->
 
     <!-- Having trouble section -->
 
+    <footer>
+      <div class="container having-trouble">
+        <h2>Having trouble thinking of an idea?</h2>
+        <p id="GIGLi">Inventor's block strikes at the worst times. But that's all changed with Jumpstart's Good Idea Generator Lite (GIGLi).</p>
+        <a class="btn btn-primary btn-large" href="#">Learn more</a>
+      </div>
+    </footer>
 
     <!-- JavaScript: jQuery, Slick, & main.js -->
     <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script type="text/javascript" src="resources/js/main.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="resources/js/main.js"></script>
   </body>
 </html>
