Applied transitions to dynamic images and set up html and css to add the carousel.

--- a/index.html
+++ b/index.html
@@ -32,11 +32,27 @@ the Slick carousel plugin, and css overrides. -->
 
     <!-- Main content -->
     <!--Jumbotron carousel -->
-
-    <div class="jumbotron jumbotron-bike">
-      <h1>Get Going.</h1>
-      <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
-      <a class="btn btn-primary btn-large" href="#">Jump in</a>
+    <div class="carousel">
+      <div class="jumbotron jumbotron-bike">
+        <h1>Get Going.</h1>
+        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+        <a class="btn btn-primary btn-large" href="#">Jump in</a>
+      </div>
+      <div class="jumbotron jumbotron-beer">
+        <h1>GET THINKING.</h1>
+        <p>Meet like-minded individuals who will help fuel your creative juices.</p>
+        <a class="btn btn-primary btn-large" href="#">Jump in</a>
+      </div>
+      <div class="jumbotron jumbotron-flowers">
+        <h1>GET CREATING.</h1>
+        <p>Stop overthinking projects and begin putting them out into the world.</p>
+        <a class="btn btn-primary btn-large" href="#">Jump in</a>
+      </div>
+      <div class="jumbotron jumbotron-duffel">
+        <h1>GET STARTED.</h1>
+        <p>What are you waiting for? Today's the day for your next big idea.</p>
+        <a class="btn btn-primary btn-large" href="#">Jump in</a>
+      </div>
     </div>
 
     <!-- Featured Product section -->
@@ -44,7 +60,11 @@ the Slick carousel plugin, and css overrides. -->
     <div class="container feature">
       <h3>Featured Product</h3>
       <div class="row">
-          <img class="img-responsive col-md-6 col-sm-12 image-zoom" src="resources/images/featured-project.png" alt="A farmhouse with snowy mountains in the background">
+          <div class="col-md-6 col-sm-12">
+            <div class="image-container">
+              <img class="" src="resources/images/featured-project.png" alt="A farmhouse with snowy mountains in the background">
+            </div>
+          </div>
           <div class="col-md-3 col-xs-6">
             <h4>DeFrost: A Documentary</h4>
             <p>by Leo De Firenze</p>
@@ -83,19 +103,25 @@ the Slick carousel plugin, and css overrides. -->
       <h3>Projects</h3>
       <div class="row">
         <div class="col-sm-4 col-xs-12">
-          <img class="img-responsive image-zoom project-img" src="resources/images/project1.png" alt="A young woman wearing black tights">
+          <div class="image-container">
+            <img class="project-img" src="resources/images/project1.png" alt="A young woman wearing black tights">
+          </div>
           <h4>The Right Tights</h4>
           <p>by Riley Mae</p>
           <p>These tights are 50 denier, beautifully constructed, hand-dyed, and guaranteed to last (no more ladders!). Made with high quality, completely toxic-free materials. Custom colors available to all backers.</p>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <img class="img-responsive image-zoom project-img top-margin" src="resources/images/project2.png" alt="An elegant sitting room with toys in the corner">
+          <div class="image-container">
+            <img class="project-img top-margin" src="resources/images/project2.png" alt="An elegant sitting room with toys in the corner">
+          </div>
           <h4>Peppermint Smart Home</h4>
           <p>by Brian McDonald</p>
           <p>Instantly upgrade your home with technology that keeps your family and home safe. We've made Peppermint easy to use. Just talk to your phone and Peppermint will help you every step of the way.</p>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <img class="img-responsive image-zoom project-img top-margin" src="resources/images/project3.png" alt="The window of a modern building reflecting a neon sign">
+          <div class="image-container">
+            <img class="project-img top-margin" src="resources/images/project3.png" alt="The window of a modern building reflecting a neon sign">
+          </div>
           <h4>American Streetlife</h4>
           <p>by Patrick Wallace</p>
           <p>I've been traveling around the United States for the past two years. I've slept on hundreds of couches, more than a few benches, and captured my experiences in this 120 page photo album.</p>
